--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.23.1
 scikit-learn==1.2.2
-pandas==1.5.3
-joblib==1.3.1
-numpy==1.24.3
-matplotlib==3.7.1
-seaborn==0.12.2
+pandas
+joblib
+numpy>=1.25
+matplotlib
+seaborn
