--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit==1.23.1
-scikit-learn==1.2.2
-pandas
-joblib
-numpy>=1.25
-matplotlib
-seaborn
+streamlit==1.28.2
+scikit-learn==1.3.2
+pandas==2.1.4
+numpy==1.26.4
+joblib==1.3.2
