--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.28.2
-scikit-learn==1.3.2
-pandas==2.1.4
-numpy==1.26.4
-joblib==1.3.2
+streamlit==1.23.1
+scikit-learn==1.1.3
+pandas==1.5.3
+numpy==1.23.4
+joblib
